--- a/internal/projects/bulleit/Interfaces/OtherDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/OtherDetailViewController.xib
@@ -267,7 +267,7 @@
 										</object>
 									</object>
 								</object>
-								<string key="NSFrame">{{0, 112}, {320, 131}}</string>
+								<string key="NSFrame">{{0, 113}, {320, 131}}</string>
 								<reference key="NSSuperview" ref="1008158405"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="394950403"/>
@@ -292,7 +292,7 @@
 										<string key="NSFrameSize">{320, 1}</string>
 										<reference key="NSSuperview" ref="1040904761"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="881813672"/>
+										<reference key="NSNextKeyView" ref="1056326026"/>
 										<string key="NSReuseIdentifierKey">_NS:180</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">1</int>
@@ -301,7 +301,7 @@
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 								</object>
-								<string key="NSFrame">{{0, 240}, {320, 167}}</string>
+								<string key="NSFrame">{{0, 244}, {320, 168}}</string>
 								<reference key="NSSuperview" ref="1008158405"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="198390049"/>
@@ -320,7 +320,7 @@
 						<string key="NSFrame">{{0, 4}, {320, 412}}</string>
 						<reference key="NSSuperview" ref="269090794"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="103961548"/>
 						<reference key="IBUIBackgroundColor" ref="607888386"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -338,7 +338,7 @@
 								<string key="NSFrameSize">{320, 365}</string>
 								<reference key="NSSuperview" ref="881813672"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1056326026"/>
+								<reference key="NSNextKeyView" ref="1008158405"/>
 								<string key="NSReuseIdentifierKey">_NS:366</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -361,7 +361,7 @@
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="1008158405"/>
+				<reference key="NSNextKeyView" ref="881813672"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -548,8 +548,8 @@
 							<reference ref="191175299"/>
 							<reference ref="103961548"/>
 							<reference ref="337552683"/>
-							<reference ref="1040904761"/>
 							<reference ref="167376168"/>
+							<reference ref="1040904761"/>
 						</object>
 						<reference key="parent" ref="269090794"/>
 						<string key="objectName">Scroll View</string>
@@ -768,7 +768,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
 							<string>UILabel</string>
-							<string>UIImageView</string>
+							<string>STImageView</string>
 							<string>UIActivityIndicatorView</string>
 							<string>UIButton</string>
 							<string>UILabel</string>
@@ -807,7 +807,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">imageView</string>
-								<string key="candidateClassName">UIImageView</string>
+								<string key="candidateClassName">STImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">loadingView</string>
@@ -911,6 +911,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/OtherDetailViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">STImageView</string>
+					<string key="superclassName">UIImageView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STImageView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
