--- a/internal/projects/bulleit/Stamped/AboutUsViewController.xib
+++ b/internal/projects/bulleit/Stamped/AboutUsViewController.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrame">{{5, 12}, {310, 336}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="475469435"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">4</int>
@@ -59,7 +58,6 @@
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{32, 350}, {256, 58}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1010583062"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -102,7 +100,6 @@
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{32, 408}, {256, 58}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="480294978"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -132,7 +129,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{80, 483}, {160, 15}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="429911492"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="357617943">
@@ -168,7 +164,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{45, 500}, {231, 43}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1062237822"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<reference key="IBUIBackgroundColor" ref="357617943"/>
@@ -200,7 +195,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{45, 558}, {231, 43}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="815621698"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<reference key="IBUIBackgroundColor" ref="357617943"/>
@@ -209,7 +203,7 @@ DUhlbHZldGljYQ</string>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string type="base64-UTF8" key="IBUIText">wqkyMDExIFN0YW1wZWQsIEluYy4KTmV3IFlvcmssIE5ZA</string>
+						<string type="base64-UTF8" key="IBUIText">wqkyMDExIFN0YW1wZWQsIEluYy4KTWFkZSBpbiBOWUM</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC42IDAuNiAwLjYAA</bytes>
@@ -227,7 +221,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{141, 613}, {38, 38}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<int key="IBUIContentMode">5</int>
@@ -243,7 +236,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{126, 297}, {68, 21}}</string>
 						<reference key="NSSuperview" ref="107088891"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="425358847"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -273,7 +265,6 @@ DUhlbHZldGljYQ</string>
 				</array>
 				<string key="NSFrameSize">{320, 696}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="608744020"/>
 				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -295,7 +286,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="348251740"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -310,7 +300,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">276</int>
 						<string key="NSFrame">{{0, 44}, {320, 416}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:174</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -323,7 +312,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, -316}, {320, 365}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="93932925"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -339,7 +327,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 7}, {69, 30}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="144172638"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -378,7 +365,6 @@ DUhlbHZldGljYQ</string>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{116, 14}, {88, 16}}</string>
 						<reference key="NSSuperview" ref="1065572797"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="194269740"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">1</int>
@@ -392,7 +378,6 @@ DUhlbHZldGljYQ</string>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="999300434"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -603,51 +588,7 @@ DUhlbHZldGljYQ</string>
 			<nil key="sourceID"/>
 			<int key="maxID">41</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AboutUsViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="followButtonPressed:">id</string>
-						<string key="settingsButtonPressed:">id</string>
-						<string key="stampedButtonPressed:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="followButtonPressed:">
-							<string key="name">followButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="settingsButtonPressed:">
-							<string key="name">settingsButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="stampedButtonPressed:">
-							<string key="name">stampedButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="contentView">UIView</string>
-						<string key="scrollView">UIScrollView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AboutUsViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
